added backdrop for backroud of modal. Closing function of modal does not work. Auth form almostdone

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,19 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  // margin: 0;
+  // padding: 0;
 }
 
+.main-container {
+  background: #242D35;
+  color: #fff;
+  
+
+}
+
+.modal-container{
+  border-radius: 20px;
+  background: #000;
+  height: 70%;
+  max-height: 650px;
+}
