Edited structure of the app, modal works, loging-banner added

--- a/client/src/columns/Main.scss
+++ b/client/src/columns/Main.scss
@@ -21,8 +21,8 @@
     }
 }
 
-.main-column{
-    border-right: 1px solid black;
+.column{
+    border-right: 1px solid #444242;;
     // width: calc(100% / 3);
-    padding: 0 20px;
+    padding: 10px 20px;
 }
