--- a/client/src/shared/FormElements/Button.scss
+++ b/client/src/shared/FormElements/Button.scss
@@ -54,6 +54,11 @@ $text-color: #ffffff;
     }
   }
 
+  &-log{
+    color: #000;
+    width: 100%;
+  }
+
   &-input-change {
     background: none;
     color: #1da1f2;
