--- a/client/src/shared/UIElements/Modal.scss
+++ b/client/src/shared/UIElements/Modal.scss
@@ -7,7 +7,7 @@
   margin: auto;
   left: 0;
   right: 0;
-  // background: rgba(0, 0, 0, 0.26);
+  background: rgb(56 117 128 / 26%);
 }
 
 .modal-container {
