--- a/client/src/shared/components/LogingWindow.scss
+++ b/client/src/shared/components/LogingWindow.scss
@@ -1,8 +1,7 @@
-
-.logging-window_container{
-    border: 1px solid #444242;;
-    border-radius: 10px ;
-    padding: 10px;
+.logging-banner_container {
+    border: 1px solid #444242;
+    border-radius: 10px;
+    padding: 10px 15px;
     max-width: 380px;
 }
 
