--- a/client/src/columns/Main.scss
+++ b/client/src/columns/Main.scss
@@ -5,6 +5,7 @@
     padding: 0 20px;
     height: 100vh;
 
+
     .aside-left{
         width: 25%;
         
@@ -16,9 +17,9 @@
     .main-content{
         width: 45%;
     }
-    .aside-right {
-        width: 30%;
-    }
+    // .aside-right {
+    //     width: 30%;
+    // }
 }
 
 .column{
