--- a/client/src/shared/components/Navigation/MainHeader.scss
+++ b/client/src/shared/components/Navigation/MainHeader.scss
@@ -3,13 +3,15 @@ ul > li {
     list-style: none;
     font-size: 20px;
     font-weight: 600;
+    margin-bottom: 20px;
+    
 }
 
 ul {
     padding: 0;
 }
 
-.header-main{
-    max-width: 380px;
-    min-width: 300px;
-}
+// .header-main{
+//     max-width: 380px;
+//     min-width: 300px;
+// }
