--- a/client/src/shared/UIElements/Modal.scss
+++ b/client/src/shared/UIElements/Modal.scss
@@ -11,8 +11,12 @@
 }
 
 .modal-container {
+  border-radius: 20px;
+  background: #000;
+  height: 70%;
+  max-height: 650px;
   width: 600px;
-  // height: 100%;
+  overflow-y: scroll;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -20,4 +24,11 @@
   left: 0;
   right: 0;
   z-index: 20;
+}
+
+
+.modal_header{
+  position: sticky;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.65);;
 }
