--- a/client/src/shared/UIElements/Modal.scss
+++ b/client/src/shared/UIElements/Modal.scss
@@ -30,5 +30,10 @@
 .modal_header{
   position: sticky;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.65);;
+  background-color: rgba(0, 0, 0, 0.65);
+
+  .btn-container{
+    display: flex;
+    justify-content: space-between;
+  }
 }
