--- a/client/src/shared/UIElements/Modal.scss
+++ b/client/src/shared/UIElements/Modal.scss
@@ -35,5 +35,11 @@
   .btn-container{
     display: flex;
     justify-content: space-between;
+
+    .save-btn {
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+    }
   }
 }
