--- a/client/src/user/components/UserItem.scss
+++ b/client/src/user/components/UserItem.scss
@@ -1,22 +1,19 @@
-
-.user-item{
+.user-item {
     justify-content: space-between;
     display: flex;
     max-height: 60px;
-    transition: all .3s;
+    transition: all 0.3s;
     border-radius: 25px;
     padding: 10px;
     bottom: 10px;
     left: 0;
     position: absolute;
 
-    &:hover{
-        background-color: #16181C;
-        transition: all .3s;
-
+    &:hover {
+        background-color: #16181c;
+        transition: all 0.3s;
     }
-    .user-item_image{ 
-
+    .user-item_image {
         img {
             width: 130px;
             height: 130px;
@@ -25,22 +22,21 @@
         }
     }
 
-    .props-item_info{
+    .props-item_info {
         margin-left: 10px;
 
-
-
-        h3, p{
+        h3,
+        p {
             margin: 0;
         }
     }
 }
 
-.user-profile__header{
+.user-profile__header {
     display: flex;
     padding: 5px 0;
-    .header__user-info{
-        .tweet-count{
+    .header__user-info {
+        .twitt-count {
             margin: 0;
             font-size: 12px;
             color: grey;
@@ -48,106 +44,93 @@
     }
 }
 
-.profile-background__container{
-    .profile-background{
-        .bg{
+.profile-background__container {
+    .profile-background {
+        .bg {
             max-height: 200px;
             width: 100%;
         }
     }
 }
 
-
-
-.user-profile__info{
+.user-profile__info {
     padding: 10px;
-    
-    .image-btn__container{
+
+    .image-btn__container {
         display: flex;
         justify-content: space-between;
 
-        .user-profile__image{
-            img{
+        .user-profile__image {
+            img {
                 position: absolute;
                 top: 180px;
             }
         }
     }
 
-    .profile-name__container{
-        .profile-name{
-            h3{
+    .profile-name__container {
+        .profile-name {
+            h3 {
                 margin-bottom: 0;
             }
         }
-        .nick-name{
-            p{
+        .nick-name {
+            p {
                 margin: 0;
                 color: grey;
             }
         }
     }
 
-    .registration-info{
+    .registration-info {
         padding: 10px 0;
         color: grey;
         display: flex;
 
-        .location-container{
+        .location-container {
             display: flex;
             margin-right: 10px;
 
-            .location-icon{
+            .location-icon {
                 margin-right: 5px;
-
-
-
-            }
-        }  
-
-        .link-container{
-            display: flex;
-            margin-right: 10px;
-
-            
-            .link-icon{
-                margin-right: 5px;
-
-
             }
         }
 
-        .date-container{
+        .link-container {
             display: flex;
-                margin-right: 10px;
+            margin-right: 10px;
+
+            .link-icon {
+                margin-right: 5px;
+            }
+        }
+
+        .date-container {
+            display: flex;
+            margin-right: 10px;
 
             .date-icon {
                 margin-right: 5px;
             }
         }
-
     }
 
-    .folowers-info{
+    .folowers-info {
         display: flex;
         justify-content: space-between;
         width: max-content;
 
-        .col{
+        .col {
             padding-right: 10px;
-            display: flex   ;
+            display: flex;
 
-            .count{
+            .count {
                 padding-right: 5px;
             }
-            .text{
+            .text {
                 color: gray;
                 margin: 0;
-
             }
         }
     }
-
 }
-
-    
