--- a/client/src/layout/columns/Main.scss
+++ b/client/src/layout/columns/Main.scss
@@ -3,16 +3,17 @@
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
-
+    min-height: 100vh;
 
 
     .aside-left{
-        width: 25%;
+        width: 24%;
         display: flex;
         justify-content: flex-end;
         
         .header-main{
-            width: 230px;
+            max-width: 250px;
+            min-width: 230px;
             height: max-content;
             position: sticky;
             top: 10px;
