--- a/client/src/shared/UIElements/Modal.scss
+++ b/client/src/shared/UIElements/Modal.scss
@@ -1,7 +1,7 @@
 .modal {
   // width: 600px;
   // height: 50%;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   margin: auto;
