--- a/client/src/tweets/components/TwittItem.scss
+++ b/client/src/tweets/components/TwittItem.scss
@@ -23,7 +23,7 @@
     }
 
     .twitt-content{
-        margin-right: 5px;
+       width: 100%;
     }
 
     .creator-info{
@@ -46,9 +46,12 @@
     }
 
     .twitt-image__container{
+        
         img{
             border-radius: 20px;
-            width: 100%;
+            // width: 100%;
+            max-height: 510px;
+            object-fit: contain;
 
         }
     }
