Added all of the tweets to thae main feed

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,6 +29,11 @@
 
     .aside-right{
       max-width: 350px;
+
+      .aside-content{
+        position: sticky;
+        top: 10px;
+      }
     }
   }
 
