Implemented basic validation, added useReducer

--- a/client/src/layout/columns/Main.scss
+++ b/client/src/layout/columns/Main.scss
@@ -25,9 +25,9 @@
             flex-direction: column;
         }
     }
-    .main-content{
-        width: 45%;
-    }
+    // .main-content{
+    //     width: 45%;
+    // }
     // .aside-right {
     //     width: 30%;
     // }
