--- a/client/src/user/components/UserItem.scss
+++ b/client/src/user/components/UserItem.scss
@@ -36,7 +36,7 @@
     display: flex;
     padding: 5px 0;
     .header__user-info {
-        .twitt-count {
+        .tweet-count {
             margin: 0;
             font-size: 12px;
             color: grey;
