--- a/client/src/shared/FormElements/Button.scss
+++ b/client/src/shared/FormElements/Button.scss
@@ -122,4 +122,10 @@ $text-color: #ffffff;
       border-radius: 50px;
     }
   }
+
+  &-tweet{
+    background-color: $primary-color;
+    font-size: 20px;
+    font-weight: 600;
+  }
 }
