Modified pop up of new tweet

--- a/client/src/shared/FormElements/Input.scss
+++ b/client/src/shared/FormElements/Input.scss
@@ -45,11 +45,19 @@ $placeholder-color: #657786;
     &:focus {
       outline: none;
     }
-  }
 
+
+  }
+  &.new-tweet-input{
+    &:focus-within{
+      border: none;
+    }
+  }
 
   
 }
+
+
 .form-control--invalid{
   border-color: red;
 }
