--- a/client/src/shared/UIElements/Modal.scss
+++ b/client/src/shared/UIElements/Modal.scss
@@ -13,7 +13,8 @@
 .modal-container {
   border-radius: 20px;
   background: #000;
-  height: 70%;
+  height: max-content;
+  min-height: 280px;
   max-height: 650px;
   width: 600px;
   overflow-y: scroll;
@@ -24,11 +25,25 @@
   left: 0;
   right: 0;
   z-index: 20;
+
+  .modal_footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+
+    &.tweet{
+
+      border-top: 1px solid #444242;
+
+    }
+  }
 }
 
 
 .modal_header{
-  position: sticky;
+  position: absolute;
+  width: 100%;
   top: 0;
   background-color: rgba(0, 0, 0, 0.65);
 
@@ -42,4 +57,12 @@
       padding: 0 20px;
     }
   }
+}
+
+
+
+.modal_content{
+  padding-top: 54px;
+  height: 100%;
+
 }
