--- a/client/src/shared/UIElements/Avatar.scss
+++ b/client/src/shared/UIElements/Avatar.scss
@@ -7,7 +7,8 @@
         border-radius: 50%;
         border: 4px solid #000;
     }
-
+    
+    &.new-tweet,
     &.tweet-creator{
         
         img{
@@ -16,4 +17,5 @@
             border-radius: 50px;
         }
     }
+
 }
