--- a/client/src/shared/UIElements/Card.scss
+++ b/client/src/shared/UIElements/Card.scss
@@ -5,6 +5,6 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     border-radius: 2px;
     overflow: hidden;
-    // background: #fff;
+    height: 100%;
 
 }
