--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,41 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
   box-sizing: border-box;
   // margin: 0;
   // padding: 0;
-
 }
 
 .main-container {
   background: #000;
   color: #fff;
 
-  // .aside-left{
-  //   max-width: 250px;
-    
-  // }
-  
-  .content{
+  .content {
     display: flex;
     width: 76%;
 
-    .main-feed{
+    .main-feed {
       width: 60%;
       max-width: 600px;
       padding: 0;
-
     }
 
-    .aside-right{
+    .aside-right {
       max-width: 350px;
 
-      .aside-content{
+      .aside-content {
         position: sticky;
         top: 10px;
       }
     }
   }
-
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+
+  &.name {
+    color: #fff;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
