--- a/client/src/tweets/components/TweetItem.scss
+++ b/client/src/tweets/components/TweetItem.scss
@@ -14,6 +14,11 @@
     .twit-actions__content {
         display: flex;
         justify-content: space-between;
+
+        img{
+            width: 20px;
+            height: 30px;
+        }
     }
 
     .creator-image {
