--- a/client/src/tweets/components/TweetItem.scss
+++ b/client/src/tweets/components/TweetItem.scss
@@ -1,71 +1,80 @@
 .tweet-container {
-    display: flex;
-    padding: 10px;
+  display: flex;
+  padding: 10px;
+    border-bottom: 1px solid #666;
 
-    .tweet-header {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .tweet-description__container {
-        margin: 8px 0;
-    }
-
-    .tweet-actions__container{
-        padding: 10px 0;
-
-        .twit-actions__content {
-            display: flex;
-            justify-content: space-between;
-            max-width: 425px;
-            .button{
-    
-                &-icon{
-                    padding: 10px;
-                }
-            }
-    
-            img{
-                width: 18px;
-            }
-    
-    
-        }
-    }
-
-
-    .creator-image {
-        margin-right: 5px;
-    }
-
-    .tweet-content {
+    .tweet-link{
         width: 100%;
     }
+  .tweet-header {
+    display: flex;
+    justify-content: space-between;
+  }
 
-    .creator-info {
-        display: flex;
+  .tweet-description__container {
+    margin: 8px 0;
+  }
 
-        .name {
-            margin: 0 5px 0 0;
-            font-size: 16px;
-            font-weight: 700;
-        }
-        .nickname {
-            margin: 0 5px 0 0;
-            color: grey;
+  .tweet-actions__container {
+    padding: 10px 0;
+
+    .twit-actions__content {
+      display: flex;
+      justify-content: space-between;
+      max-width: 425px;
+      .button {
+        &-icon {
+          padding: 10px;
+          background: none;
         }
 
-        .date {
-            margin: 0 5px 0 0;
+        &:hover {
+          background-color: darken(#d9d9d9, 70%);
+        //   color: #1da1f2;
+
         }
+
+
+      }
+
+      img {
+        width: 18px;
+      }
+    }
+  }
+
+  .creator-image {
+    margin-right: 5px;
+  }
+
+  .tweet-content {
+    width: 100%;
+  }
+
+  .creator-info {
+    display: flex;
+
+    .name {
+      margin: 0 5px 0 0;
+      font-size: 16px;
+      font-weight: 700;
+    }
+    .nickname {
+      margin: 0 5px 0 0;
+      color: grey;
     }
 
-    .tweet-image__container {
-        img {
-            border-radius: 20px;
-            // width: 100%;
-            max-height: 510px;
-            object-fit: contain;
-        }
+    .date {
+      margin: 0 5px 0 0;
     }
+  }
+
+  .tweet-image__container {
+    img {
+      border-radius: 20px;
+      width: 100%;
+      max-height: 510px;
+      object-fit: contain;
+    }
+  }
 }
