--- a/client/src/tweets/components/TweetItem.scss
+++ b/client/src/tweets/components/TweetItem.scss
@@ -74,7 +74,7 @@
       border-radius: 20px;
       width: 100%;
       max-height: 510px;
-      object-fit: contain;
+      object-fit: cover;
     }
   }
 }
