Fixed inputs with custom hook of tweet pages

--- a/client/src/tweets/components/diaologs/NewTweet.scss
+++ b/client/src/tweets/components/diaologs/NewTweet.scss
@@ -50,6 +50,7 @@
     // bottom: 0;
     width: 100%;
     justify-content: space-between;
+    border-top: 1px solid #666;
 
     .tweet-options{
         display: flex;
