--- a/client/src/user/components/dialogs/Auth.scss
+++ b/client/src/user/components/dialogs/Auth.scss
@@ -6,7 +6,7 @@
 .authentication {
     max-width: 440px;
     margin: 0 auto;
-    // position: absolute;
+    padding: 0 20px 40px;
 
   
   form {
