--- a/client/src/shared/FormElements/Button.scss
+++ b/client/src/shared/FormElements/Button.scss
@@ -49,7 +49,7 @@ $text-color: #ffffff;
     padding: 5px 10px;
     color: #d9d9d9;
     background: none;
-    margin: 10px;
+    // margin: 10px;
     font-size: 21px;
 
     &:hover {
