Deleted some files due to better structure | added icons for the reusable component user Page

--- a/client/src/shared/FormElements/Button.scss
+++ b/client/src/shared/FormElements/Button.scss
@@ -65,6 +65,7 @@ $text-color: #ffffff;
 
   &-back {
     background: none;
+    padding: 10px;
     &:hover{
       background-color: #16181C;
       transition: all .3s;
