--- a/client/src/user/components/UserItem.scss
+++ b/client/src/user/components/UserItem.scss
@@ -36,6 +36,10 @@
     display: flex;
     padding: 5px 0;
     .header__user-info {
+        h3{
+            margin: 0;
+            
+        }
         .tweet-count {
             margin: 0;
             font-size: 12px;
