Fixed user page |only posted tweets by certain user will be shown

--- a/client/src/shared/UIElements/Modal.scss
+++ b/client/src/shared/UIElements/Modal.scss
@@ -40,7 +40,7 @@
 
 .modal-container {
   .modal_header{
-    padding: 10px;
+    padding: 10px 20px;
     &.no-header{
       display: none;
     }
