--- a/client/src/shared/FormElements/Input.scss
+++ b/client/src/shared/FormElements/Input.scss
@@ -51,6 +51,24 @@ $placeholder-color: #657786;
       border: none;
       box-shadow: none;
     }
+    
+
+
+  }
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover, 
+  input:-webkit-autofill:focus, 
+  input:-webkit-autofill:active{
+      -webkit-box-shadow: 0 0 0 30px #242424 inset !important;
+      -webkit-text-fill-color: #fff !important;
+  }
+  
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus,
+  select:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px #242424 inset !important;
+    -webkit-text-fill-color: #fff !important;
   }
 
     textarea {
