Created context with the data of logged user | Configured props of UserItem.js | Configured logging pop up if not logged in

--- a/client/src/user/components/UserItem.scss
+++ b/client/src/user/components/UserItem.scss
@@ -69,12 +69,18 @@
         display: flex;
         justify-content: space-between;
 
-        .user-profile__image {
-            img {
-                position: absolute;
-                top: 180px;
+        .user-content{
+            margin-top: 40px;
+
+            .user-profile__image {
+                img {
+                    position: absolute;
+                    top: 180px;
+                }
             }
+
         }
+
     }
 
     .profile-name__container {
