--- a/client/src/shared/FormElements/Button.scss
+++ b/client/src/shared/FormElements/Button.scss
@@ -70,7 +70,7 @@ $text-color: #ffffff;
       background-color: #16181C;
       transition: all .3s;
 
-  }
+    }
   }
 
   &-input-change {
@@ -78,7 +78,8 @@ $text-color: #ffffff;
     color: #1da1f2;
     font-weight: 600;
   }
-
+  
+  &-cancel,
   &-edit-profile{
     background: none;
     border: 1px solid;
@@ -91,17 +92,16 @@ $text-color: #ffffff;
     }
   }
 
+  &-log_out,
   &-save-edits{
     color: #000;
-    font-weight: 500;
+    font-weight: 600;
 
     &:hover {
       background-color: darken(#d9d9d9, 10%);
 
     }
   }
-
-
 
   &-tweet{
     background-color: $primary-color;
