Fixed problem with the state management | enable functionality for creating user with the birth date

--- a/client/src/user/components/dialogs/Auth.scss
+++ b/client/src/user/components/dialogs/Auth.scss
@@ -30,5 +30,23 @@
   }
 }
 
+.select-date__container{
+  display: flex;
+  // justify-content: space-between;
+
+  // select {
+  //   margin-right: 10px;
+  // }
+
+  .day{
+    width: 20%;
+  }
+  .month{ 
+    width: 50%;
+  }
+  .year{
+    width: 25%;
+  }
+}
 
 
