--- a/client/src/shared/UIElements/Modal.scss
+++ b/client/src/shared/UIElements/Modal.scss
@@ -78,7 +78,7 @@
     .save-btn {
       display: flex;
       align-items: center;
-      padding: 0 20px;
+      // padding: 0 20px;
     }
   }
 }
